--- a/registration.html
+++ b/registration.html
@@ -51,6 +51,12 @@ text-align:center;
 <input type="email"id="email"name="email"required>
 <label for="phone">phone Number</label>
 <input for="tel"id="phone"name="phone"required>
+<label>Gender</label>
+<select>
+<option>Male</option>
+<option>Female</option>
+<option>other</option>
+</select>
 <label for="event">choose Event</label>
 <select id="event"name="event">
 <option value="coding">coding contest</option>
